--- a/lib/credentials.rb.template
+++ b/lib/credentials.rb.template
@@ -1,3 +1,19 @@
-ENV['SENDGRID_SERVER']  =''
-ENV['SENDGRID_USERNAME']=''
-ENV['SENDGRID_PASSWORD']=''
+# NEWS CONFIG
+HN_URL        ='http://news.ycombinator.com' # no trailing slash
+
+# SERVER CONFIG
+SMTP_SERVER   ='smtp.example.com'
+SERVER_PORT   ='25'
+SERVER_AUTH   =:plain
+SERVER_DOMAIN ='localhost.localdomain'
+
+# EMAIL CONFIG
+EMAIL_FROM    ='me@example.com'
+EMAIL_TO      ='others@example.com'
+SUBJECT_PREFIX='Awesome Subject'
+EMAIL_HEADER  ='Awesome Heading'
+
+# SENDGRID CONFIG
+EMAIL_USERNAME='username'
+EMAIL_PASSWORD='password'
+
