Add option for optionally sending empty emails

--- a/lib/credentials.rb.template
+++ b/lib/credentials.rb.template
@@ -1,6 +1,10 @@
 # NEWS CONFIG
 HN_URL        ='http://news.ycombinator.com' # no trailing slash
 
+# DIGEST CONFIG
+SEND_EMPTY    = true
+EMPTY_MESSAGE = "There were no posts. Submit stories here: #{HN_URL}/submit"
+
 # SERVER CONFIG
 SMTP_SERVER   ='smtp.example.com'
 SERVER_PORT   ='25'
