--- a/lib/credentials.rb.template
+++ b/lib/credentials.rb.template
@@ -1,22 +1,22 @@
 # NEWS CONFIG
-HN_URL        ='http://news.ycombinator.com' # no trailing slash
+HN_URL            = 'http://news.ycombinator.com' # no trailing slash
 
 # DIGEST CONFIG
-SEND_EMPTY    = true
-EMPTY_MESSAGE = "There were no posts. Submit stories here: #{HN_URL}/submit"
+SEND_EMPTY        = false
+EMPTY_MESSAGE     = "There were no posts. Submit stories here: #{HN_URL}/submit"
 
 # SERVER CONFIG
-SMTP_SERVER   ='smtp.example.com'
-SERVER_PORT   ='25'
-SERVER_AUTH   =:plain
-SERVER_DOMAIN ='localhost.localdomain'
+SMTP_SERVER       = 'smtp.example.com'
+SERVER_PORT       = '25'
+SERVER_AUTH       = :plain
+SERVER_DOMAIN     = 'localhost.localdomain'
 
 # EMAIL CONFIG
-EMAIL_FROM    ='me@example.com'
-EMAIL_TO      ='others@example.com'
-SUBJECT_PREFIX='Awesome Subject'
-EMAIL_HEADER  ='Awesome Heading'
+EMAIL_FROM        = 'me@example.com'
+EMAIL_TO          = 'others@example.com'
+SUBJECT_PREFIX    = 'Awesome Subject'
+EMAIL_HEADER      = 'Awesome Heading'
 
 # SENDGRID CONFIG
-EMAIL_USERNAME='username'
-EMAIL_PASSWORD='password'
+EMAIL_USERNAME    = 'username'
+EMAIL_PASSWORD    = 'password'
